payment update delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="login_activity__password">Password</string>
 
     <!-- PAYMENTS -->
-    <string name="title_activity_payments">Payments</string>
+    <string name="payments_activity__payment_title">Payments</string>
+    <string name="payments_activity__total_sum">Total sum:</string>
 
     <!-- MENU PAYMENTS -->
     <string name="menu_payments__create_group">Create group</string>
@@ -42,5 +43,9 @@
     <string name="invite_friends_activity__invitation_cta">cta</string>
     <string name="invite_friends_activity__invite_friend">Invite friend</string>
     <string name="invite_friends_activity__friends_email">Friend\'s email</string>
+    <string name="payments_activity__add_dialog__update">Update</string>
+    <string name="payments_activity__add_dialog__cancel">Cancel</string>
+    <string name="payments_activity__add_dialog__delete">Delete</string>
+
 
 </resources>
